# pdfbro

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chromium  Dockerfile.cloudrun  Dockerfile.cloudrun.chromium  Dockerfile.cloudrun.libreoffice  Dockerfile.dev  Dockerfile.lambda  Dockerfile.lambda.chromium  Dockerfile.lambda.libreoffice  Dockerfile.libreoffice  Dockerfile.test  INTEGRATION_TESTS.md  Makefile  README.md  TEST_ISSUES.md  TEST_STATUS.md  comparison.md  docker-compose.bench.steady-state.yml  docker-compose.bench.yml  docker-compose.yml  fly.toml
.github/workflows/: bindings-node.yml  bindings-python.yml
bench/: Cargo.toml  README.md
bench/fixtures/: .gitignore  bench.html  html_large.html  html_small.html
bench/results/: 2026-05-04-chromium-flag-tuning.md  2026-05-04-lok-validation.md
bench/results/2026-05-04-lok-quick/: perf.md
bench/results/20260501T101529Z/: perf.md
bench/results/20260501T123054Z/: perf.md
bench/results/20260501T184521Z/: perf.md
bench/results/20260502T051457Z/: perf.md
bench/results/20260503T074706Z/: perf.md
bench/results/20260503T085826Z/: perf.md
bench/results/20260504T061212Z/: perf.md
bench/results/20260504T082154Z/: perf.md
bench/results/20260504T112333Z/: perf.md
bench/src/: driver.rs  main.rs  perf.rs  preflight.rs  quality.rs  report.rs  rss.rs  stats.rs  workload.rs
bindings/: README.md
bindings/fixtures/: hello.html
bindings/node/: .gitignore  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/folio/: __init__.py
bindings/python/pdfbro/: __init__.py
bindings/python/tests/: test_e2e.py  test_smoke.py
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  banner.rs  exit.rs  io_helpers.rs  main.rs  model.rs  parse.rs
crates/cli/src/commands/: batch.rs  completions.rs  convert.rs  encrypt.rs  metadata.rs  mod.rs  pdfops.rs
crates/cli/tests/: cli.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  logging.rs  types.rs
crates/engine/src/bookmarks/: mod.rs
crates/engine/src/chrome_fetch/: cache.rs  detect.rs  download.rs  mod.rs
crates/engine/src/chromium/: launch.rs  markdown.css  markdown.rs  mod.rs  pdf_params.rs  render.rs  screenshot.rs  wait.rs
crates/engine/src/encrypt/: mod.rs
crates/engine/src/libreoffice/: convert.rs  discover.rs  error.rs  filter.rs  mod.rs  unoserver.rs
crates/engine/src/pdfa/: mod.rs
crates/engine/src/pdfops/: flatten.rs  merge.rs  metadata.rs  mod.rs  optimise.rs  rotate.rs  split.rs  validate.rs  watermark.rs
crates/engine/tests/: chromium_html.rs  encrypt.rs  libreoffice.rs  pdfops.rs
crates/engine/tests/fixtures/office/: README.md  sample.csv  sample.rtf
crates/js/: Cargo.toml
crates/js/src/: errors.rs  folio.rs  lib.rs
crates/py/: Cargo.toml
crates/py/src/: errors.rs  folio_async.rs  folio_sync.rs  launch.rs  lib.rs  pdfbro_async.rs  pdfbro_sync.rs  runtime.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  backend.rs  banner.rs  batch_worker.rs  cgroup.rs  config.rs  config.rs.bak  console_store.rs  download.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  multipart.rs  shutdown.rs  state.rs  supervised_engine.rs  ulid_utils.rs
crates/server/src/routes/: batch.rs  batch_state.rs  batch_types.rs  chromium.rs  console.rs  debug.rs  estimate.rs  health.rs  libreoffice.rs  mod.rs  openapi.rs  pdfengines.rs  preview.rs  util.rs
crates/server/src/security/: header_validator.rs  mod.rs  url_validator.rs
crates/server/src/webhook/: circuit_breaker.rs  config.rs  mod.rs  queue.rs  validate.rs
crates/server/tests/: e2e.rs  font_doctor_tests.rs  live_preview_tests.rs  pdf_optimise_tests.rs  router.rs  scalar_docs_tests.rs  size_estimator_tests.rs
crates/server/tests/bdd/: GOTENBERG_GAP_ANALYSIS.md  baseline.json  main.rs
crates/server/tests/bdd/features/: chromium_concurrent.feature  chromium_convert_html.feature  chromium_convert_markdown.feature  chromium_convert_url.feature  chromium_screenshot_html.feature  chromium_screenshot_markdown.feature  chromium_screenshot_url.feature  debug.feature  health.feature  libreoffice_convert.feature  libreoffice_errors.feature  output_filename.feature  pdfengines_bookmarks.feature  pdfengines_convert.feature  pdfengines_embed.feature  pdfengines_encrypt.feature  pdfengines_flatten.feature  pdfengines_merge.feature  pdfengines_metadata.feature  pdfengines_rotate.feature  pdfengines_split.feature  pdfengines_stamp.feature  pdfengines_watermark.feature  prometheus_metrics.feature  root.feature  version.feature  webhook.feature
crates/server/tests/bdd/steps/: container.rs  http.rs  mod.rs  pdf.rs  webhook.rs
crates/server/tests/bdd/support/: mod.rs  world.rs
crates/server/tests/bdd/testdata/: embed_1.xml  embed_2.xml  encrypted.docx  generate.rs  index.html  index.md  truncated.docx  unknown.xyz
docs/: gap-analysis.md  gotenberg-spec.md  implementation-status.md  markdown-plus.md  obscura-spec.md  proposal.md
docs/dispatch/: README.md  spec-11-chromium.md  spec-12-libreoffice.md  spec-13-pdfops.md  spec-20-cli.md  spec-30-server.md
docs/roadmap/: 60-bdd-test-porting.md  61-missing-features-analysis.md  63-folio-vs-gotenberg-3shot.md  new.md
docs/specs/: 00-overview.md  10-engine-types.md  11-engine-chromium.md  12-engine-libreoffice.md  13-engine-pdfops.md  14-engine-pdfa.md  15-webhook.md  16-bookmarks.md  17-watermark.md  18-screenshot.md  19-encrypt.md  20-bdd-testing.md  20-cli.md  20-missing-features-roadmap.md  30-server.md  36-chromium-wait-conditions.md  37-libreoffice-advanced.md  38-pdfengines-backends.md  39-config-flags.md  40-bindings-py.md  40-special-features.md  41-bindings-js.md  41-github-issues-analysis.md  42-smart-pdf-optimiser.md  43-font-doctor.md  44-crystal-clear-errors.md  45-live-preview-mode.md  46-pdf-size-estimator.md  47-one-command-install.md  48-interactive-docs.md  49-template-library.md  (+4 more)
scripts/: load_test.sh  test-images.sh
ui/: .gitignore  README.md  package.json  svelte.config.js
(+41 files in other folders)
