[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/__deesh_reddy__/folio"
authors = []

[workspace.dependencies]
# Internal
engine = { path = "crates/engine" }

# Async / runtime
tokio = { version = "1", features = ["full"] }

# Errors
anyhow = "1"
thiserror = "2"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Chromium DevTools Protocol
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# HTTP server
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# PDF manipulation
lopdf = "0.34"

# Bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
