[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/__deesh_reddy__/folio"
authors = []

[workspace.dependencies]
# Internal
engine = { path = "crates/engine" }

# Async / runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Errors
anyhow = "1"
thiserror = "2"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
humantime = "2"
humantime-serde = "1"

# Filesystem helpers
tempfile = "3"

# Test utilities
proptest = "1"
static_assertions = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Chromium DevTools Protocol
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Markdown
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Async stream utilities (used by chromiumoxide event streams)
futures-util = "0.3"

# HTTP server
axum = { version = "0.8", features = ["multipart"] }
multer = "3"
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }

# HTTP client (test/e2e)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Identifiers
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# PDF manipulation
lopdf = "0.34"

# Bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
