[workspace]
resolver = "2"
members = ["crates/*", "bench"]
default-members = ["crates/engine", "crates/server", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/vel/pdfbro"
authors = []

[workspace.dependencies]
# Internal
engine = { path = "crates/engine" }

# Encoding
base64 = "0.22"

# Async / runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Errors
anyhow = "1"
thiserror = "2"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
humantime = "2"
humantime-serde = "1"

# Filesystem helpers
tempfile = "3"

# Test utilities
proptest = "1"
static_assertions = "1"

# Logging
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.28"

# Chromium DevTools Protocol
chromiumoxide = { version = "0.9" }

# Markdown
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Async stream utilities (used by chromiumoxide event streams)
futures-util = "0.3"

# HTTP server
axum = { version = "0.8", features = ["multipart"] }
multer = "3"
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }

# HTTP client (test/e2e)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
url = "2"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Identifiers
ulid = "1"

# CLI
assert_cmd = "2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
glob = "0.3"
predicates = "3"
walkdir = "2"

# PDF manipulation
lopdf = "0.34"
zip = "2"

# Chrome auto-download
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
dirs = "5"

# Bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
napi = { version = "2", features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2"
napi-build = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
