[package]
name = "bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lopdf = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7"
