[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pdfbro"
version = "0.2.0"
description = "pdfbro: Rust-native PDF conversion, embeddable in Python."
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
Homepage = "https://github.com/inkkit/pdfbro"
Repository = "https://github.com/inkkit/pdfbro"

[tool.maturin]
manifest-path = "../../crates/py/Cargo.toml"
module-name = "pdfbro._native"
features = ["pyo3/extension-module"]
python-source = "."
strip = true
# CHROME_VERSION lives outside the crate dir; must be explicit so it's included in the sdist
include = [{ path = "bindings/CHROME_VERSION", format = ["sdist"] }]
