[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Folio CLI"

[[bin]]
name = "folio"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
engine = { workspace = true }
glob = { workspace = true }
humantime = { workspace = true }
lopdf = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
