[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Folio core engine: ChromiumEngine, LibreOfficeEngine, PdfOperations"

[features]
default = ["chromium", "libreoffice"]
chromium = ["dep:chromiumoxide", "dep:futures-util", "dep:pulldown-cmark", "dep:urlencoding"]
libreoffice = ["dep:reqwest"]

[dependencies]
chromiumoxide = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
humantime-serde = { workspace = true }
lopdf = { workspace = true }
pulldown-cmark = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = "7"

# Image processing for watermark
image = { workspace = true }

# URL encoding for screenshot data URLs
urlencoding = { version = "2", optional = true }

[dev-dependencies]
axum = { workspace = true }
proptest = { workspace = true }
static_assertions = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
