[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pdfbro core engine: ChromiumEngine, LibreOfficeEngine, PdfOperations"

[features]
default = ["chromium", "libreoffice"]
chromium = ["dep:chromiumoxide", "dep:futures-util", "dep:pulldown-cmark", "dep:urlencoding"]
libreoffice = ["dep:reqwest", "dep:base64"]
chrome-fetch = ["chromium", "dep:reqwest", "dep:sha2", "dep:zip", "dep:flate2", "dep:tar", "dep:dirs", "dep:walkdir"]

[dependencies]
base64 = { workspace = true, optional = true }
chromiumoxide = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
humantime-serde = { workspace = true }
lopdf = { workspace = true }
pulldown-cmark = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = "7"

# Image processing for watermark
image = { workspace = true }

# URL encoding for screenshot data URLs
urlencoding = { version = "2", optional = true }

# Chrome auto-download (chrome-fetch feature)
sha2 = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
proptest = { workspace = true }
static_assertions = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
