[package]
name = "py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Folio Python bindings (PyO3)"

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["chromium", "libreoffice", "chrome-fetch"]
chromium = ["engine/chromium"]
libreoffice = ["engine/libreoffice"]
chrome-fetch = ["engine/chrome-fetch"]

[dependencies]
engine = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
