[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Folio HTTP server (Gotenberg-compatible)"

[[bin]]
name = "folio-server"
path = "src/main.rs"

[dependencies]
engine = { workspace = true }

# Async / runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# HTTP server
axum = { workspace = true }
multer = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

# Filesystem helpers
tempfile = { workspace = true }

# Markdown (wrapper-template inlining for /forms/chromium/convert/markdown)
pulldown-cmark = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time / duration parsing
humantime = { workspace = true }

# Webhook HTTP client
reqwest = { workspace = true, features = ["json", "multipart"] }
url = { workspace = true }

# CLI
clap = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
reqwest = { workspace = true }
static_assertions = { workspace = true }
lopdf = { workspace = true }

# BDD testing
cucumber = "0.21"
http = "1"
hyper = { version = "0.14", features = ["full"] }

# Conditional Docker support for BDD tests
# Note: Set FOLIO_BDD_SKIP_DOCKER=1 to skip Docker-based tests
testcontainers = "0.22"

[[test]]
name = "bdd"
harness = false
