[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pdfbro HTTP server (Gotenberg-compatible)"

[[bin]]
name = "pdfbro-server"
path = "src/main.rs"

[features]
default = ["chromium", "libreoffice"]
chromium = ["engine/chromium", "dep:pulldown-cmark"]
libreoffice = ["engine/libreoffice"]

[dependencies]
engine = { workspace = true }

# Async / runtime
tokio = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# HTTP server
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
multer = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["auth"] }

# Identifiers
ulid = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

# Filesystem helpers
tempfile = { workspace = true }

# Markdown (wrapper-template inlining for /forms/chromium/convert/markdown)
pulldown-cmark = { workspace = true, optional = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Time / duration parsing
humantime = { workspace = true }

# Regex for font extraction and URL pattern matching
regex = "1"

# Webhook HTTP client
reqwest = { workspace = true, features = ["json", "multipart"] }
url = { workspace = true }

# PDF inspection (page counts for split expansion)
lopdf = { workspace = true }

# CLI
clap = { workspace = true }

# Prometheus metrics
prometheus = { version = "0.13", default-features = false, features = ["protobuf"] }
once_cell = "1.21.4"

# Cross-platform system metrics (CPU, memory)
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Scalar API documentation (interactive docs)
scalar_api_reference = { version = "0.1", features = ["axum"] }

# Operator console static asset embedding
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
reqwest = { workspace = true }
static_assertions = { workspace = true }
lopdf = { workspace = true }
zip = { workspace = true }

# BDD testing
cucumber = "0.21"
http = "1"
hyper = { version = "0.14", features = ["full"] }

# Conditional Docker support for BDD tests
# Note: Set PDFBRO_BDD_SKIP_DOCKER=1 to skip Docker-based tests
testcontainers = "0.22"

[[test]]
name = "bdd"
harness = false
